2012-04-03  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/52835
	* tree-data-ref.c (build_rdg): Return NULL if
	compute_data_dependences_for_loop failed.

2012-04-03  Eric Botcazou  <ebotcazou@adacore.com>

	* varasm.c (initializer_constant_valid_for_bitfield_p): Return true
	for REAL_CST as well.
	(output_constructor): Use RECORD_OR_UNION_TYPE_P predicate.
	In the bitfield case, if the value is a REAL_CST, convert it first to
	an INTEGER_CST.

2012-04-02  H.J. Lu  <hongjiu.lu@intel.com>

	* config.gcc: Use i386/biarchx32.h instead of i386/biarch64.h
	for --with-abi={x32|mx32} or --with-multilib-list=mx32.
	(supported_defaults): Add abi for i[34567]86-*-* and x86_64-*-*.

	* config/i386/biarchx32.h: New.

2012-04-02  Anatoly Sokolov  <aesok@post.ru>

	* config/arm/arm.h (PREFERRED_RELOAD_CLASS): Remove.
	* config/arm/arm.c (TARGET_PREFERRED_RELOAD_CLASS): Define.
	(arm_preferred_reload_class): New function.

2012-04-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52756
	* tree-ssa-threadupdate.c (def_split_header_continue_p): New function.
	(thread_through_loop_header): After threading through the loop latch
	remove the split part from the loop and clear further threading
	opportunities that would create a multiple entry loop.

2012-04-02  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/52800
	* cprop.c (execute_rtl_cprop): Call cleanup_cfg with
	CLEANUP_CFG_CHANGED.

2012-04-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52803
	* loop-init.c (gate_handle_loop2): Destroy loops here if
	we don't enter RTL loop optimizers.

2012-04-02  Uros Bizjak  <ubizjak@gmail.com>

	Partially revert:
	2012-03-29  Richard Guenther  <rguenther@suse.de>

	* rtl.h (extended_count): Remove.
	* combine.c (extended_count): Remove.

2012-04-02  Dodji Seketeli  <dodji@redhat.com>

	PR c++/40942
	* pt.c (more_specialized_fn):  Don't apply decay conversion to
	types of function parameters.

2012-04-02  Tristan Gingold  <gingold@adacore.com>